--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@emotion/styled": "^11.14.1",
     "@gsap/react": "^2.1.2",
     "@radix-ui/react-slot": "^1.2.4",
     "class-variance-authority": "^0.7.1",
@@ -22,6 +23,7 @@
     "react-dom": "19.2.0",
     "react-icons": "^5.5.0",
     "react-slick": "^0.31.0",
+    "react-wavify": "^1.11.1",
     "slick-carousel": "^1.8.1",
     "tailwind-merge": "^3.4.0"
   },
