--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-slick": "^0.31.0",
     "react-wavify": "^1.11.1",
     "slick-carousel": "^1.8.1",
+    "swiper": "^12.0.3",
     "tailwind-merge": "^3.4.0"
   },
   "devDependencies": {
